--- a/public/myStyle.css
+++ b/public/myStyle.css
@@ -4,3 +4,22 @@
 .mt-100 {
   margin-top: 100px;
 }
+.title-feature {
+  display: block;
+  position: absolute;
+  right: 0;
+  margin-top: 16px !important;
+  padding: 0px !important;
+  width: 25%;
+}
+.des-feature1 {
+  display: block;
+  position: absolute;
+  right: 0;
+  margin-top: 15px;
+}
+.input-feature {
+  margin-right: 30px;
+  width: 75%;
+  margin-top: 5px;
+}
