--- a/public/myStyle.css
+++ b/public/myStyle.css
@@ -19,7 +19,77 @@
   margin-top: 15px;
 }
 .input-feature {
-  margin-right: 30px;
+  margin-right: 40px;
   width: 75%;
   margin-top: 5px;
+}
+.order-detail-button {
+  padding: 2px;
+  margin-top: 1rem !important;
+}
+.order-detail-text-right {
+  text-align: right !important;
+}
+.td-actions {
+  margin-top: 0rem;
+}
+.order-status {
+  display: block;
+}
+.form-check-label span {
+  right: -1px;
+}
+.form-check-label {
+  padding-right: 25px !important;
+}
+.post-tracking {
+  display: inline-block;
+}
+.alert-button {
+  box-shadow: aqua;
+}
+.custom-ui {
+  direction: rtl;
+  text-align: center !important;
+  width: 500px;
+  box-shadow: rgba(0, 0, 0, 0.23) 0px 20px 75px;
+  color: rgb(10, 10, 10);
+  padding: 40px;
+  background: rgb(255, 255, 255);
+  display: block;
+}
+.custom-ui button {
+  width: 160px;
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  padding: 10px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(255, 255, 255);
+  border-image: initial;
+  margin: 10px;
+  background: none;
+}
+.custom-ui i {
+  font-size: 100px;
+  color: rgb(255, 127, 52);
+}
+.sidebar .logo a.logo-mini {
+  width: 40px !important;
+}
+.sidebar .logo a.logo-normal {
+  margin-right: 5px;
+}
+.bmd-form-group [class*=" bmd-label"],
+.bmd-form-group [class^="bmd-label"] {
+  position: relative !important;
+}
+@media screen and (max-width: 767px) {
+  .login-page .container {
+    padding-top: 0px !important;
+  }
+}
+.page-header footer {
+  height: auto;
 }
